--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,15 +13,10 @@
   "dependencies": {
     "@google-analytics/data": "^4.0.1",
     "@slack/web-api": "^6.8.1",
-    "@types/inquirer": "^9.0.3",
-    "front-matter": "^4.0.2",
-    "inquirer": "^9.1.5",
     "luxon": "^3.4.3",
-    "openai": "^4.1.0",
-    "uuid": "^9.0.0"
+    "openai": "^4.17.4"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.1",
     "@types/luxon": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
