--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,16 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "npm:react",
+    "types": [
+      "lume/types.ts",
+      "https://unpkg.com/@types/react@18.2.37/index.d.ts"
+    ]
+  },
   "tasks": {
     "lume": "echo \"import 'lume/cli.ts'\" | deno run --unstable -A -",
-    "build": "deno task lume",
-    "serve": "deno task lume --serve --quiet",
+    "build": "LUME_LOGS=warning deno task lume",
+    "serve": "LUME_LOGS=info deno task lume --serve",
     "serve:debug": "MZ_DEBUG=1 deno task serve",
     "lint": "deno run -A --lock deno-lint.lock lint.ts"
   },
