--- a/deno.json
+++ b/deno.json
@@ -13,7 +13,7 @@
     "build": "LUME_LOGS=warning deno task lume",
     "serve": "LUME_LOGS=info deno task lume --serve",
     "serve:debug": "MZ_DEBUG=1 deno task serve",
-    "lint": "deno run -A --lock deno-lint.lock lint.ts"
+    "lint": "deno run --unstable-fs --allow-all --lock deno-lint.lock lint.ts"
   },
   "importMap": "import_map.json",
   "fmt": {
