--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,19 +6,22 @@
   "type": "module",
   "scripts": {
     "generate:column": "node --loader ts-node/esm bin/generate-column.ts",
-    "generate:weekly-ranking": "node --loader ts-node/esm bin/weekly-ranking.ts"
+    "generate:weekly-ranking": "node --loader ts-node/esm bin/weekly-ranking.ts",
+    "translate:en": "node --loader ts-node/esm bin/translate.ts en"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-analytics/data": "^4.0.1",
-    "@slack/web-api": "^6.11.0",
+    "@google-analytics/data": "^4.4.0",
+    "@slack/web-api": "^6.12.0",
+    "js-yaml": "^4.1.0",
     "luxon": "^3.4.3",
-    "openai": "^4.17.4"
+    "openai": "^4.32.1"
   },
   "devDependencies": {
-    "@types/luxon": "^3.3.2",
+    "@types/js-yaml": "^4.0.9",
+    "@types/luxon": "^3.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.3"
   }
 }
