--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Translate latest articles
         id: translate-latest-articles
         env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           SLACK_CHANNEL_ID: ${{ vars.MAIN_SLACK_CHANNEL_ID }}
         run: |
