Update translation success/failure tracking
Modified the translation workflow by outputting results to 'translated.json'. This restructuring allows for more efficient tracking of the successfully and unsuccessfully processed articles.

--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -52,7 +52,8 @@ jobs:
             echo "require commit & push"
             git status -sb
             echo "changed=true" >> $GITHUB_OUTPUT
-            echo "translated='$(cat translated.json)'" >> $GITHUB_OUTPUT
+            cat translated.json
+            echo "translated=$(cat translated.json)" >> $GITHUB_OUTPUT
           fi
 
       - name: Commit report
