--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -78,5 +78,5 @@ jobs:
             Check auto English-translated articles.
             
             The following articles have been translated.
-            ${{ steps.translate-latest-articles.translated }}
+            ${{ steps.translate-latest-articles.outputs.translated }}
 
