Also, we've improved the readability of the generated 'translated.json' file by formatting it with two space indentation.

--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -78,5 +78,8 @@ jobs:
             Check auto English-translated articles.
             
             The following articles have been translated.
+            
+            ```json
             ${{ steps.translate-latest-articles.outputs.translated }}
+            ```
 
