Fix multiline output in translate-articles.yml and modify .gitignore
Adjusted the way translated.json is written to $GITHUB_OUTPUT in translate-articles.yml, ensuring it is outputted as multiline. Also updated the .gitignore file within the scripts folder to include 'translated.json'.

--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -53,10 +53,11 @@ jobs:
             git status -sb
             echo "changed=true" >> $GITHUB_OUTPUT
             cat translated.json
-          
-            echo 'translated<<EOF' >> $GITHUB_OUTPUT
-            cat translated.json >> $GITHUB_OUTPUT
-            echo 'EOF' >> $GITHUB_OUTPUT
+            {
+              echo 'translated<<EOF'
+              cat translated.json
+              echo EOF
+            } >> $GITHUB_OUTPUT
           fi
 
       - name: Commit report
