--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -56,6 +56,7 @@ jobs:
             {
               echo 'translated<<EOF'
               cat translated.json
+              echo ''
               echo EOF
             } >> $GITHUB_OUTPUT
           fi
