--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.552.0",
     "@google-analytics/data": "^4.4.0",
     "@slack/web-api": "^6.12.0",
     "cheerio": "^1.0.0-rc.12",
     "js-yaml": "^4.1.0",
     "luxon": "^3.4.3",
-    "openai": "^4.32.1"
+    "openai": "^4.32.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
