fix: replace repo-sync/pull-request(archived) with peter-evans/create-pull-request
The commit refactors GitHub actions to simplify the process surrounding automated commits and PRs. This is done by replacing multiple step actions (`Commit report` and `Create Pull Request`) with a single action using `peter-evans/create-pull-request@v6`. This change streamlines the process and removes redundancy. The new action generates a unique branch for each commit and PR, assigns labels, and assigns a designated reviewer.

--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -61,25 +61,15 @@ jobs:
             } >> $GITHUB_OUTPUT
           fi
 
-      - name: Commit report
-        if: steps.translate-latest-articles.outputs.changed == 'true'
-        run: |
-          set -eu
-          git config --local user.email "github-actions@mamezou.com"
-          git config --local user.name "github-actions"
-          git commit -m "feat: Add English-translated articles"
-          git push -u origin ${{ steps.create-feature-branch.outputs.branch }}
-
-      # https://github.com/marketplace/actions/github-pull-request-action
-      - name: Create Pull Request
-        uses: repo-sync/pull-request@v2
+      - name: Commit and Create Pull request
+        uses: peter-evans/create-pull-request@v6
         with:
-          destination_branch: "main"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: ${{ steps.create-feature-branch.outputs.branch }}
-          pr_title: "[no-image] Add English-translated articles"
-          pr_reviewer: kudoh
-          pr_body: > 
+          commit-message: "feat: Add English-translated articles"
+          author: "mameka <mameka-bot@mamezou.com>"
+          branch: auto-translation
+          delete-branch: true
+          title: "[no-image] Add English-translated articles"
+          body: >
             Check auto English-translated articles.
             
             The following articles have been translated.
@@ -89,4 +79,5 @@ jobs:
             ${{ steps.translate-latest-articles.outputs.translated }}
 
             ```
-
+          reviewers: kudoh
+          labels: bot
