--- a/.github/workflows/generate-gpt-column.yml
+++ b/.github/workflows/generate-gpt-column.yml
@@ -25,13 +25,6 @@ jobs:
           role-session-name: image-push-session
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Create Branch for GPT generated page
-        id: create-gpt-branch
-        run: |
-          BRANCH=feature/$(date +"%Y-%m-%d-%H%M%S")-gpt
-          git checkout -b $BRANCH
-          echo "branch=$BRANCH" >> $GITHUB_OUTPUT
-
       - name: Set up Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -62,29 +55,15 @@ jobs:
           cd ${GITHUB_WORKSPACE}/scripts
           npm run generate:column
           git add ${GITHUB_WORKSPACE}/src/_data
-          if ! git diff-index --quiet HEAD --; then
-            echo "require commit & push"
-            git status -sb
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
 
-      - name: Commit report
-        if: steps.update-for-gpt-column.outputs.changed == 'true'
-        run: |
-          set -eu
-          git config --local user.email "github-actions@mamezou.com"
-          git config --local user.name "github-actions"
-          git commit -m "chore: Add GPT generated column"
-          git push -u origin ${{ steps.create-gpt-branch.outputs.branch }}
-
-      # TODO deprecated. use gh pr create
-      # https://github.com/marketplace/actions/github-pull-request-action
-      - name: Create Pull Request
-        uses: repo-sync/pull-request@v2
+      - name: Commit and Create Pull request
+        uses: peter-evans/create-pull-request@v6
         with:
-          destination_branch: "main"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: ${{ steps.create-gpt-branch.outputs.branch }}
-          pr_title: "[auto-review] Update GPT column by github-actions"
-          pr_reviewer: kudoh
-          pr_body: "Check the GPT generated column."
+          commit-message: "chore: Add GPT generated column"
+          author: "mameka <mameka-bot@mamezou.com>"
+          branch: daily-mameka-column
+          delete-branch: true
+          title: "[auto-review] Update GPT column by github-actions"
+          body: "Check the GPT generated column."
+          reviewers: kudoh
+          labels: bot
