--- a/.github/workflows/generate-weekly-ranking.yml
+++ b/.github/workflows/generate-weekly-ranking.yml
@@ -11,13 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Create Branch for GA report
-        id: create-ga-branch
-        run: |
-          BRANCH=feature/$(date +"%Y-%m-%d")-ga
-          git checkout -b $BRANCH
-          echo "branch=$BRANCH" >> $GITHUB_OUTPUT
-
       - name: Set up Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -51,31 +44,18 @@ jobs:
           export GOOGLE_APPLICATION_CREDENTIALS=${GITHUB_WORKSPACE}/google_auth.json
           npm run generate:weekly-ranking
           git add ${GITHUB_WORKSPACE}/src/_data
-          if ! git diff-index --quiet HEAD --; then
-            echo "require commit & push"
-            git status -sb
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
 
-      - name: Commit report
-        if: steps.generate-ga-pv-report.outputs.changed == 'true'
-        run: |
-          set -eu
-          git config --local user.email "github-actions@mamezou.com"
-          git config --local user.name "github-actions"
-          git commit -m "feat: Add PV ranking report"
-          git push -u origin ${{ steps.create-ga-branch.outputs.branch }}
-
-      # https://github.com/marketplace/actions/github-pull-request-action
-      - name: Create Pull Request
-        uses: repo-sync/pull-request@v2
+      - name: Commit and Create Pull request
+        uses: peter-evans/create-pull-request@v6
         with:
-          destination_branch: "main"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: ${{ steps.create-ga-branch.outputs.branch }}
-          pr_title: "[auto-review] Update GA Report by github-actions"
-          pr_reviewer: kudoh
-          pr_body: "Check weekly access ranking report."
+          commit-message: "feat: Add PV ranking report"
+          author: "mameka <mameka-bot@mamezou.com>"
+          branch: weekly-ranking-report
+          delete-branch: true
+          title: "[auto-review] Update GA Report by github-actions"
+          body: "Check weekly access ranking report."
+          reviewers: kudoh
+          labels: bot
 
       - name: Delete google auth file
         run: rm -f ${GITHUB_WORKSPACE}/google_auth.json
