--- a/.github/workflows/generate-weekly-ranking.yml
+++ b/.github/workflows/generate-weekly-ranking.yml
@@ -7,6 +7,10 @@ on:
 
 jobs:
   build:
+    permissions:
+      id-token: write
+      contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
