--- a/.github/workflows/generate-weekly-ranking.yml
+++ b/.github/workflows/generate-weekly-ranking.yml
@@ -19,20 +19,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-          key: ${{ runner.OS }}-node-${{ hashFiles('scripts/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
+          cache: npm
+          cache-dependency-path: scripts/package-lock.json
 
       - name: Install
-        run: |
-          cd ${GITHUB_WORKSPACE}/scripts
-          npm ci
+        run: cd ${GITHUB_WORKSPACE}/scripts && npm ci
 
       - name: configure google credentials
         uses: google-github-actions/auth@v2
