--- a/netlify.toml
+++ b/netlify.toml
@@ -16,7 +16,7 @@
   ignore  = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF src lume _config.ts deno.json netlify.toml"
 
   # Default build command.
-  command = "LUME_LOGS=warning deno task lume"
+  command = "deno task lume"
 
   [build.environment]
     NODE_VERSION="18"
