--- a/scripts/package.json
+++ b/scripts/package.json
@@ -18,8 +18,9 @@
     "cheerio": "^1.0.0-rc.12",
     "js-yaml": "^4.1.0",
     "luxon": "^3.4.3",
-    "openai": "^4.55.0",
-    "sharp": "^0.33.3"
+    "openai": "^4.55.4",
+    "sharp": "^0.33.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
