--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ social
 .idea
 .vscode
 !.vscode/settings.json
+!.vscode/launch.json
+!.vscode/tasks.json
 
 # textlint cache
 kvs-node-localstorage
