Refactor devcontainer.json to fix typo in image name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
   // # devcontainer.json sample
   // recommend: Do not sort json
   // ## To create image
-  "name": "deveropperSite",
+  "name": "deveroperSite",
   "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
 
