--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -11,15 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js environment
-        uses: actions/setup-node@v4
+      - name: Set up Deno environment
+        uses: denoland/setup-deno@v2
         with:
-          node-version: '20'
-          cache: npm
-          cache-dependency-path: scripts/package-lock.json
-
-      - name: Install
-        run: cd ${GITHUB_WORKSPACE}/scripts && npm ci
+          deno-version: v2.x
 
       - name: Translate latest articles
         id: translate-latest-articles
@@ -28,9 +23,8 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           SLACK_CHANNEL_ID: ${{ vars.MAIN_SLACK_CHANNEL_ID }}
         run: |
-          set -eu
           cd ${GITHUB_WORKSPACE}/scripts
-          npm run translate:en
+          deno task translate:en
           cat translated.json
           {
             echo 'translated<<EOF'
