--- a/netlify.toml
+++ b/netlify.toml
@@ -16,8 +16,8 @@
 #  ignore  = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF src lume _config.ts deno.json netlify.toml"
 
   # Default build command.
-  command = "deno task lume"
-# command = "./build-netlify.sh"
+  command = "deno upgrade && deno task lume"
+#  command = "./build-netlify.sh"
 
   [build.environment]
     NODE_VERSION="22"
