feat: add translated blog posts
Add a detailed post on mastering Go concurrency concepts with Mutex and Channel, including usage examples and comparisons. Also introduced a blog explaining PostgreSQL's CYCLE statement for safe recursive queries, complete with examples and practical use cases.

--- a/scripts/deno.json
+++ b/scripts/deno.json
@@ -17,6 +17,6 @@
     "generate:column": "deno run --allow-env --allow-ffi --allow-sys --allow-net --allow-read --allow-write bin/generate-column.ts",
     "generate:ranking": "deno run --allow-env --allow-ffi --allow-sys --allow-net --allow-read --allow-write bin/weekly-ranking.ts",
     "translate:en": "deno run --allow-env --allow-sys --allow-net --allow-read --allow-write bin/translate.ts en",
-    "translate:cn": "deno run --allow-env --allow-sys --allow-net --allow-read --allow-write bin/translate.ts zh"
+    "translate:zh": "deno run --allow-env --allow-sys --allow-net --allow-read --allow-write bin/translate.ts zh"
   }
 }
