--- a/scripts/deno.json
+++ b/scripts/deno.json
@@ -16,6 +16,7 @@
   "tasks": {
     "generate:column": "deno run --allow-env --allow-ffi --allow-sys --allow-net --allow-read --allow-write bin/generate-column.ts",
     "generate:ranking": "deno run --allow-env --allow-ffi --allow-sys --allow-net --allow-read --allow-write bin/weekly-ranking.ts",
-    "translate:en": "deno run --allow-env --allow-sys --allow-net --allow-read --allow-write bin/translate.ts en"
+    "translate:en": "deno run --allow-env --allow-sys --allow-net --allow-read --allow-write bin/translate.ts en",
+    "translate:zh": "deno run --allow-env --allow-sys --allow-net --allow-read --allow-write bin/translate.ts zh"
   }
 }
