chore: update OpenAI API version and minor config changes
Upgraded @openai/openai to version 4.96.0 and updated the model to "gpt-4.1-mini" in scripts. Adjusted GitHub workflow to use vars instead of secrets for AWS role configuration. Ensured deno.lock reflects the latest dependency changes.

--- a/.github/workflows/generate-gpt-column.yml
+++ b/.github/workflows/generate-gpt-column.yml
@@ -23,7 +23,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.MZ_SITE_ROLE_ARN }}
+          role-to-assume: ${{ vars.MZ_SITE_ROLE_ARN }}
           role-session-name: image-push-session
           aws-region: ${{ env.AWS_REGION }}
 
