Change reviewer for auto-review workflow

--- a/.github/workflows/generate-gpt-column.yml
+++ b/.github/workflows/generate-gpt-column.yml
@@ -52,5 +52,5 @@ jobs:
           delete-branch: true
           title: "[auto-review] Automatically update Mameka's column"
           body: "review the generated content and verify its accuracy."
-          reviewers: kudoh
+          reviewers: kondoumh
           labels: bot
