--- a/.github/workflows/generate-weekly-ranking.yml
+++ b/.github/workflows/generate-weekly-ranking.yml
@@ -46,5 +46,5 @@ jobs:
           delete-branch: true
           title: "[auto-review] Update latest ranking"
           body: "Check weekly access ranking report."
-          reviewers: kudoh
+          reviewers: kondoumh
           labels: bot
