Change reviewer from kudoh to kondoumh

--- a/.github/workflows/translate-articles.yml
+++ b/.github/workflows/translate-articles.yml
@@ -98,5 +98,5 @@ jobs:
             ${{ steps.translate-latest-articles.outputs.translated }}
 
             ```
-          reviewers: kudoh
+          reviewers: kondoumh
           labels: bot
